--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url(https://fonts.googleapis.com/earlyaccess/lateef.css); 
+@import url(https://fonts.googleapis.com/earlyaccess/amiri.css)
 * {
   margin: 0;
   padding: 0;
